--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,5 +1,5 @@
 * 
-  border: 1px solid black
+  // border: 1px solid black
   box-sizing: border-box
 
 
@@ -20,27 +20,26 @@
 
 body
   margin: 0
-  height: 90%
   background-color: gray
-
+  background-color: lightgreen
 
 .app 
-  border: 2px solid green
+  // border: 2px solid red
   background-color: lightgreen
-  height: 100vh
   display: flex
   justify-content: center
 
 
 
 .calculator 
-  width: 400px
-  height: 600px
+  width: 300px
+  height: 450px
   display: grid
   grid-template-columns: repeat(4, 1fr)
   gap: 10px
   grid-auto-rows: minmax(50px, auto)
-  border: 2px solid yellow
+  // border: 2px solid yellow
+  // margin: 8rem
   margin: 8rem
 
 
@@ -52,12 +51,16 @@ body
   color: white
 
 #bothDisplays #display
-  border: 2px solid blue
+  // border: 2px solid blue
   text-align: right
   padding: 5px
   height: 5rem
   font-family: codystarregular, bpdotsregular, regular
   font-size: 2rem
+  font-weight: bold
+  padding-top: 1rem
+
+
 
 
 
@@ -117,10 +120,21 @@ body
 
 #bothDisplays ~ div 
   text-align: center
-  padding: 1.7rem 0
+  padding: 1rem 0
   font-size: 2rem
   cursor: pointer
   font-family: monospace
+
+
+#one, #two, #three,
+#four, #five, #six, 
+#seven, #eight, #nine,
+#zero, #decimal
+  background: blue
+
+
+
+
 
 
 /*Click effects*/
@@ -135,4 +149,37 @@ body
 #bothDisplays ~ div:active
       
     
+
+
+
+
+
+
+
+
+ /*Responsivness*/
+ /*Laptop screen*/
+@media all and (max-width: 1200px) 
+  .calculator
+    margin-top: 2rem
   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
