--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -19,12 +19,15 @@
 
 $app-bg: #5B4E77 
 $display-bg: #000000
-$display-fg: #ffffff
+$display-fg: #ff33cc
+$display-fg: red
+$display-fg: rgb(252, 102, 5)
 $number-buttons:#2E86AB 
 $operator-buttons: #F24236 
 $hover-buttons: #F5F749 
 $active-buttons: white
 $neon-color: $hover-buttons
+$buttons-fg: #2F2B29 
 // #F6F5AE 
 
 
@@ -37,6 +40,7 @@ body
   margin: 0
   background-color: gray
   background-color: $app-bg
+  user-select: none
 
 .app 
   // border: 2px solid red
@@ -77,6 +81,13 @@ body
 
 
 
+/*Appling non effect to text*/
+#bothDisplays #display 
+  color: $display-fg
+  text-shadow:0 0 7px $display-fg, 0 0 10px $display-fg, 0 0 21px $display-fg, 0 0 42px $display-fg, 0 0 82px $display-fg, 0 0 92px $display-fg, 0 0 102px $display-fg, 0 0 151px $display-fg
+
+
+
 
 
 #clear
@@ -104,7 +115,6 @@ body
   grid-column: 4 / 5
   grid-row: 2 / 3 
   background-color: $operator-buttons
-
 
 
 #add
@@ -139,6 +149,15 @@ body
   font-size: 2rem
   cursor: pointer
   font-family: monospace
+  color: $buttons-fg 
+  font-weight: bold
+  text-shadow: 0 1px 1px #bbb, 0 2px 0 #999, 0 3px 0 #888, 0 4px 0 #777, 0 5px 0 #666, 0 6px 0 #555, 0 7px 0 #444, 0 8px 0 #333, 0 9px 7px #302314
+
+
+/*Fix the text shadow effect for the equal sign*/
+#equals 
+   text-shadow: 0 1px 1px #bbb, 0 2px 0 green, 0 3px 0 #888, 0 4px 0 #777, 0 5px 0 #666, 0 6px 0 #555, 0 7px 0 #898583 , 0 8px 0 #898583 , 0 9px 7px #302314 !important
+ 
 
 
 #one, #two, #three,
